packages/edit-site/src/components/header-edit-mode/document-actions/style.scss
.edit-site-document-actions {
	display: flex;
	align-items: center;
	gap: $grid-unit;
	height: $button-size;
	justify-content: space-between;
	// Flex items will, by default, refuse to shrink below a minimum
	// intrinsic width. In order to shrink this flexbox item, and
	// subsequently truncate child text, we set an explicit min-width.
	// See https://dev.w3.org/csswg/css-flexbox/#min-size-auto
	min-width: 0;
	background: $gray-100;
	border-radius: 4px;
	width: min(100%, 450px);

	// Make the document title shorter in top-toolbar mode, as it has to be covered.
	.has-fixed-toolbar & {
		width: min(100%, 380px);
	}

	.components-button {
		&:hover {
			color: var(--wp-block-synced-color);
			background: $gray-200;
		}
	}

	@include break-medium() {
		width: 50%;
	}

	@include break-large() {
		width: min(100%, 450px);
	}

	&.is-synced-entity {
		.edit-site-document-actions__title {
			color: var(--wp-block-synced-color);
			h1 {
				color: var(--wp-block-synced-color);
			}
		}
	}
}

.edit-site-document-actions__command {
	flex-grow: 1;
	color: var(--wp-block-synced-color);
	overflow: hidden;
}

.edit-site-document-actions__title {
	flex-grow: 1;
	overflow: hidden;

	&:hover {
		color: var(--wp-block-synced-color);
	}

	.block-editor-block-icon {
		min-width: $grid-unit-30;
		flex-shrink: 0;
	}

	h1 {
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}

	.edit-site-document-actions.is-page & {
		color: $gray-800;

		h1 {
			color: $gray-800;
		}
	}

	.edit-site-document-actions.is-animated & {
		animation: edit-site-document-actions__slide-in-left 0.3s;
		@include reduce-motion("animation");
	}

	.edit-site-document-actions.is-animated.is-page & {
		animation: edit-site-document-actions__slide-in-right 0.3s;
		@include reduce-motion("animation");
	}
}

.edit-site-document-actions__shortcut {
	color: $gray-800;
}

.edit-site-document-actions__back.components-button.has-icon.has-text {
	min-width: $button-size;
	flex-shrink: 0;
	color: $gray-700;
	gap: 0;
	z-index: 1;

	&:hover {
		color: currentColor;
	}

	.edit-site-document-actions.is-animated & {
		animation: edit-site-document-actions__slide-in-left 0.3s;
		@include reduce-motion("animation");
	}
}

@keyframes edit-site-document-actions__slide-in-right {
	from {
		transform: translateX(-15%);
		opacity: 0;
	}
	to {
		transform: translateX(0);
		opacity: 1;
	}
}

@keyframes edit-site-document-actions__slide-in-left {
	from {
		transform: translateX(15%);
		opacity: 0;
	}
	to {
		transform: translateX(0);
		opacity: 1;
	}
}

